# citation-tracker

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  config.yaml  pyproject.toml  walkthrough.md
.github/workflows/: pages.yml  tests.yml
data/manual/: .gitkeep
data/pdfs/: .gitkeep
docs/: citation-tracker-recap.html
src/citation_tracker/: __init__.py  analyser.py  cli.py  config.py  db.py  fetcher.py  mailer.py  parser.py  pipeline.py  pwa.py  report.py  resolver.py
src/citation_tracker/backends/: __init__.py  claude_code.py  openrouter.py
src/citation_tracker/sources/: __init__.py  adsapi.py  deduplicator.py  openalexapi.py  semantic_scholar.py
src/pwa/: index.html  manifest.webmanifest  service-worker.js
tests/: test_analyser.py  test_config.py  test_db.py  test_deduplicator.py  test_fetcher.py  test_openrouter.py  test_parser.py  test_report.py  test_resolver.py
